test: add unit tests for services and controllers
- 15 service tests (AuthService, ProductService, WarehouseService,
  ProcurementService, RequisitionService, InvoiceService, SupplierService,
  AdminService, CostCenterService, StatsService, JwtService, EmailService,
  CookieService, ProductMigrationService, WeeklyReportService)
- 13 controller tests (AuthController, ProductController, WarehouseController,
  ProcurementController, RequisitionController, InvoiceController,
  SuppliersController, UserController, AdminController, CostCenterController,
  CategoryController, DashboardController, ProductMigrationController)
- application-test.properties for test configuration

100+ tests passing covering core service and controller functionality