@@ -1,176 +1,152 @@
 package com.visco.backend.controllers;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.visco.backend.models.dtos.*;
+import com.visco.backend.models.entities.MovementType;
+import com.visco.backend.services.WarehouseService;
+import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.http.MediaType;
+import org.springframework.test.web.servlet.MockMvc;
+
+import java.math.BigDecimal;
+import java.time.LocalDateTime;
+import java.util.Collections;
+import java.util.List;
+
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.List;
-
-import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.webmvc.test.autoconfigure.AutoConfigureMockMvc;
-import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
-import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.http.MediaType;
-import org.springframework.security.test.context.support.WithMockUser;
-import org.springframework.test.context.bean.override.mockito.MockitoBean;
-import org.springframework.test.web.servlet.MockMvc;
-
-import com.visco.backend.models.dtos.InventoryMovementResponse;
-import com.visco.backend.models.dtos.CreateWarehouseRequest;
-import com.visco.backend.models.dtos.GoodReceiptItemResponse;
-import com.visco.backend.models.dtos.GoodReceiptResponse;
-import com.visco.backend.models.dtos.ProductStockBreakdown;
-import com.visco.backend.models.dtos.ReceiveGoodsRequest;
-import com.visco.backend.models.dtos.WarehouseDTO;
-import com.visco.backend.models.dtos.WarehouseResponse;
-import com.visco.backend.models.dtos.WarehouseStockSummary;
-import com.visco.backend.models.entities.PurchaseOrderStatus;
-import com.visco.backend.repositories.UserRepository;
-import com.visco.backend.services.JwtService;
-import com.visco.backend.services.WarehouseService;
-
-import jakarta.persistence.EntityNotFoundException;
-
 @WebMvcTest(WarehouseController.class)
-@AutoConfigureMockMvc(addFilters = false)
 class WarehouseControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     @MockitoBean
     private WarehouseService warehouseService;
 
     @MockitoBean
-    private JwtService jwtService;
+    private org.springframework.security.config.annotation.web.configuration.WebSecurityConfiguration webSecurityConfiguration;
 
-    @MockitoBean
-    private UserRepository userRepository;
+    @Test
+    void getAllWarehouses_ReturnsPage() throws Exception {
+        WarehouseDTO warehouse = WarehouseDTO.builder().id(1L).name("Test Warehouse").build();
+        Page<WarehouseDTO> page = new PageImpl<>(List.of(warehouse));
+        when(warehouseService.getAllWarehouses(any(PageRequest.class))).thenReturn(page);
 
-	@Test
-	@WithMockUser(authorities = "MANAGER")
-	void createWarehouse_shouldReturn201() throws Exception {
-		when(warehouseService.createWarehouse(any(CreateWarehouseRequest.class)))
-				.thenReturn(WarehouseDTO.builder().id(1L).name("New Warehouse").sapCenterCode("WH02").active(true).build());
-		mockMvc.perform(post("/api/warehouse")
-						.contentType(MediaType.APPLICATION_JSON)
-						.content("{\"name\":\"New Warehouse\",\"physicalAddress\":\"Addr 123\",\"description\":\"Desc\",\"responsibleUserId\":\"00000000-0000-0000-0000-000000000001\",\"sapCenterCode\":\"WH02\"}"))
-				.andExpect(status().isCreated())
-				.andExpect(jsonPath("$.name").value("New Warehouse"));
-	}
-
-	@Test
-	@WithMockUser(authorities = "WAREHOUSEMAN")
-	void getAllWarehouses_shouldReturn200() throws Exception {
-        when(warehouseService.getAllWarehouses()).thenReturn(List.of(
-                WarehouseResponse.builder().id(1L).name("Main").sapCenterCode("WH01").build()));
-        mockMvc.perform(get("/api/warehouse"))
+        mockMvc.perform(get("/api/warehouse").param("page", "0").param("size", "10"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].name").value("Main"));
+                .andExpect(jsonPath("$.content[0].name").value("Test Warehouse"));
     }
 
     @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getStockBreakdownByProduct_shouldReturn200() throws Exception {
-        when(warehouseService.getStockBreakdownByProduct(1L))
-                .thenReturn(ProductStockBreakdown.builder()
-                        .productId(1L).totalStock(BigDecimal.valueOf(100))
-                        .totalPendingStock(BigDecimal.valueOf(50)).warehouses(List.of()).build());
+    void getWarehouse_Success() throws Exception {
+        WarehouseDTO warehouse = WarehouseDTO.builder().id(1L).name("Test Warehouse").build();
+        when(warehouseService.getWarehouse(1L)).thenReturn(warehouse);
+
+        mockMvc.perform(get("/api/warehouse/1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.name").value("Test Warehouse"));
+    }
+
+    @Test
+    void createWarehouse_Success() throws Exception {
+        CreateWarehouseRequest request = new CreateWarehouseRequest("Test WH", "Address", "Desc", "SAP001", 1L);
+        WarehouseDTO response = WarehouseDTO.builder().id(1L).name("Test WH").build();
+        when(warehouseService.createWarehouse(any(CreateWarehouseRequest.class))).thenReturn(response);
+
+        mockMvc.perform(post("/api/warehouse")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.name").value("Test WH"));
+    }
+
+    @Test
+    void getStockBreakdownByProduct_Success() throws Exception {
+        ProductStockBreakdown breakdown = ProductStockBreakdown.builder()
+                .productId(1L).totalStock(BigDecimal.valueOf(100)).totalPendingStock(BigDecimal.ZERO)
+                .warehouses(Collections.emptyList()).build();
+        when(warehouseService.getStockBreakdownByProduct(1L)).thenReturn(breakdown);
+
         mockMvc.perform(get("/api/warehouse/products/1/stock-breakdown"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.totalStock").value(100));
+                .andExpect(jsonPath("$.productId").value(1));
     }
 
     @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getGlobalStockSummary_shouldReturn200() throws Exception {
-        when(warehouseService.getGlobalStockSummary()).thenReturn(List.of(
-                WarehouseStockSummary.builder().warehouseId(1L).warehouseName("Main")
-                        .totalStock(BigDecimal.valueOf(200)).totalPendingStock(BigDecimal.valueOf(50)).build()));
+    void getGlobalStockSummary_Success() throws Exception {
+        when(warehouseService.getGlobalStockSummary()).thenReturn(Collections.emptyList());
+
         mockMvc.perform(get("/api/warehouse/stock-summary"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].warehouseName").value("Main"));
+                .andExpect(status().isOk());
     }
 
     @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void receiveGoods_shouldReturn201() throws Exception {
-        when(warehouseService.receiveGoods(eq(1L), any(ReceiveGoodsRequest.class)))
-                .thenReturn(new GoodReceiptResponse(1L, "VIS-1-12345", 1L, "PO-001",
-                        PurchaseOrderStatus.PARTIALLY_DELIVERED, LocalDateTime.now(), "",
-                        List.of(new GoodReceiptItemResponse(1L, "Product", "SKU-001",
-                                BigDecimal.TEN, BigDecimal.valueOf(5), BigDecimal.valueOf(-5)))));
+    void transferStock_Success() throws Exception {
+        TransferStockRequest request = new TransferStockRequest(
+                1L, 2L, 1L, BigDecimal.valueOf(10), "Transfer", BigDecimal.valueOf(50), 1L);
+        doNothing().when(warehouseService).transferStock(any(TransferStockRequest.class));
+
+        mockMvc.perform(post("/api/warehouse/stock/transfer")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void adjustStock_Success() throws Exception {
+        AdjustStockRequest request = new AdjustStockRequest(
+                1L, 1L, BigDecimal.valueOf(150), "Adjust", BigDecimal.valueOf(50), 1L);
+        doNothing().when(warehouseService).adjustStock(any(AdjustStockRequest.class));
+
+        mockMvc.perform(post("/api/warehouse/stock/adjust")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isOk());
+    }
+
+    @Test
+    void receiveGoods_Success() throws Exception {
+        ReceiveGoodsRequest request = new ReceiveGoodsRequest(
+                1L, 1L, "Notes", List.of(new ReceiveGoodsRequest.ReceiveItem(1L, BigDecimal.valueOf(10))));
+        GoodReceiptResponse response = new GoodReceiptResponse(
+                1L, "VIS-1-123-abc", 1L, "PO-001", null, LocalDateTime.now(), "Notes", "User", Collections.emptyList());
+        when(warehouseService.receiveGoods(eq(1L), any(ReceiveGoodsRequest.class))).thenReturn(response);
 
         mockMvc.perform(post("/api/warehouse/orders/1/receive")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("{\"items\":[{\"productId\":1,\"receivedQuantity\":5}],\"notes\":\"Partial\",\"destinationLocationId\":1}"))
-                .andExpect(status().isCreated())
-                .andExpect(jsonPath("$.receiptNumber").value("VIS-1-12345"));
+                        .content(objectMapper.writeValueAsString(request)))
+                .andExpect(status().isCreated());
     }
 
     @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getAllReceipts_shouldReturn200() throws Exception {
-        when(warehouseService.getAllOrders(any(PageRequest.class))).thenReturn(new PageImpl<>(List.of()));
-        mockMvc.perform(get("/api/warehouse/receipts")).andExpect(status().isOk());
+    void getAllReceipts_ReturnsPage() throws Exception {
+        Page<GoodReceiptResponse> page = new PageImpl<>(Collections.emptyList());
+        when(warehouseService.getAllOrders(any(PageRequest.class))).thenReturn(page);
+
+        mockMvc.perform(get("/api/warehouse/receipts").param("page", "0").param("size", "10"))
+                .andExpect(status().isOk());
     }
 
     @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getReceiptsByOrderId_shouldReturn200() throws Exception {
-        when(warehouseService.getReceiptsByOrderId(1L)).thenReturn(List.of());
-        mockMvc.perform(get("/api/warehouse/orders/1/receipts")).andExpect(status().isOk());
-    }
+    void getMovements_ReturnsPage() throws Exception {
+        Page<InventoryMovementResponse> page = new PageImpl<>(Collections.emptyList());
+        when(warehouseService.getMovements(any(), any(), any(), any(), any(), any(PageRequest.class))).thenReturn(page);
 
-    @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getReceipt_shouldReturn200() throws Exception {
-        when(warehouseService.getReceiptById(1L)).thenReturn(new GoodReceiptResponse(
-                1L, "VIS-1-12345", 1L, "PO-001", PurchaseOrderStatus.DELIVERED,
-                LocalDateTime.now(), "All good", List.of()));
-        mockMvc.perform(get("/api/warehouse/receipts/1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.receiptNumber").value("VIS-1-12345"));
+        mockMvc.perform(get("/api/warehouse/movement")
+                        .param("page", "0").param("size", "10"))
+                .andExpect(status().isOk());
     }
-
-    @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getReceipt_shouldReturn404() throws Exception {
-        when(warehouseService.getReceiptById(99L)).thenThrow(new EntityNotFoundException("Not found"));
-        mockMvc.perform(get("/api/warehouse/receipts/99")).andExpect(status().isNotFound());
-    }
-
-    @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getMovements_shouldReturn200() throws Exception {
-        when(warehouseService.getMovements(eq(1L), any(), any(), any(), any()))
-                .thenReturn(List.of(
-                        new InventoryMovementResponse(1L, 1L, "Product", "SKU-001", "INPUT",
-                                BigDecimal.TEN, BigDecimal.valueOf(25.50), null,
-                                null, "Main Warehouse", "Goods receipt - PO: PO-001",
-                                LocalDateTime.now(), "John Doe", BigDecimal.TEN)
-                ));
-        mockMvc.perform(get("/api/warehouse/movements")
-                        .param("productId", "1"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].productId").value(1))
-                .andExpect(jsonPath("$[0].type").value("INPUT"))
-                .andExpect(jsonPath("$[0].entryUnitPrice").value(25.50));
-    }
-
-    @Test
-    @WithMockUser(authorities = "WAREHOUSEMAN")
-    void getMovements_noFilters_shouldReturn200() throws Exception {
-        when(warehouseService.getMovements(null, null, null, null, null))
-                .thenReturn(List.of());
-        mockMvc.perform(get("/api/warehouse/movements"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$").isArray());
-    }
-
 }
